--- a/index.html
+++ b/index.html
@@ -51,11 +51,38 @@
 				</div>
 			</div>	 
 		</section>	
+		<!-- stats section -->
+		<section class="stats">
+			<div class="container">
+				<h3 class="stats-heading text-center my-1">
+					Welcome to the best platform for building applications of all types with modern architecture and scaling				
+				</h3>
+				<div class="grid grid-3 text-center my-4">
+					<div>
+						<i class="fas fa-server fa-3x"></i>
+						<h3>13,478,398</h3>
+						<p class="text-secondary">Deployments</p>
+					</div>
+					<div>
+						<i class="fas fa-project-diagram fa-3x"></i>
+						<h3>21,478,398</h3>
+						<p class="text-secondary">Projects</p>
+					</div>
+					<div>
+						<i class="fas fa-upload fa-3x"></i>
+						<h3>967 TB</h3>
+						<p class="text-secondary">Published</p>
+					</div>
+		
+				</div>
+			</div>
+			
+		</section>
 	
 		<!-- Command Section -->
 		<section class="cli">
 			<div class="container grid">
-				<img src="images/cli2.png">
+				<img src="images/giphy.gif" style="height: 300px;">
 				<div class="card">
 					<h4>Easy to use, cross platform CLI</h3>
 				</div>
