--- a/index.html
+++ b/index.html
@@ -92,11 +92,15 @@
 			</div>
 		</section>
 		<!-- Cloud section -->
-		<section class="cloud bg-primary">
+		<section class="cloud  py-2 my-2">
 			<div class="container grid">
-				<div class="text-center">
-					
+				<div class="text-center grid-3">
+					<h2 class="lg">Extreme cloud hosting</h2>
+					<p class="lead my-1">Cloud hosting like you've never seen. 
+					Fast, efficient and scalable</p>
+					<a href="features.html" class="btn btn-dark">Read More</a>		
 				</div>
+				<img src="images/cloud2.jpg" style="width:300px">
 			</div>
 		</section>
 </body>
