--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="utilities.css">
 	<title>cloud hosting websites</title>
 </head>
 <body>
@@ -92,16 +93,78 @@
 			</div>
 		</section>
 		<!-- Cloud section -->
-		<section class="cloud  py-2 my-2">
+		<section class="cloud  py-2 my-2 bg-primary">
 			<div class="container grid">
-				<div class="text-center grid-3">
-					<h2 class="lg">Extreme cloud hosting</h2>
+				<div class="text-center grid-3 ">
+					<h2 class="md">Extreme cloud hosting</h2>
 					<p class="lead my-1">Cloud hosting like you've never seen. 
 					Fast, efficient and scalable</p>
-					<a href="features.html" class="btn btn-dark">Read More</a>		
+					<a href="features.html" class="btn bg-dark">Read More</a>		
 				</div>
-				<img src="images/cloud2.jpg" style="width:300px">
+				<img src="images/cloud.png">
 			</div>
 		</section>
+		<!-- Languages -->
+		<section class="languages ">
+			<h2 class="md text-center my-2">
+				Supported Languages
+			</h2>
+			<div class="container flex">
+				<div class="card">
+					<h4 class="text-center">Ruby</h4>
+					<img src="images/logos/ruby.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">Node js</h4>
+					<img src="images/logos/node.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">Python</h4>
+					<img src="images/logos/python.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">Go</h4>
+					<img src="images/logos/Go.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">C#</h4>
+					<img src="images/logos/csharp.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">Php</h4>
+					<img src="images/logos/php.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">Clojure</h4>
+					<img src="images/logos/clojure.png">
+				</div>
+				<div class="card">
+					<h4 class="text-center">Scala</h4>
+					<img src="images/logos/scala.png">
+				</div>
+			</div>
+		</section>
+		<!-- Footer -->
+		<footer class="footer bg-dark py-5">
+			<div class="container grid grid-3">
+				<div>
+					<h1 class="md">Metafortosi</h1>
+					<p>Copyright &copy; 2022</p>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="features.html">Features</a></li>
+						<li><a href="docs.html">Docs</a></li>
+					</ul>
+				</nav>
+				<div class="social-links">
+					<a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+					<a href="https://github.com/Anoshkhan"><i class="fab fa-github fa-2x"></i></a>
+					<a href="https://www.linkedin.com/in/anosh-khan-b2b980222/"https://www.linkedin.com/in/anosh-khan-b2b980222/><i class="fab fa-linkedin fa-2x"></i></a>
+					<a href="#"><i class="fab fa-facebook fa-2x"></i></a>	
+				</div>
+			</div>
+		</footer>
 </body>
 </html>
