--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				Supported Languages
 			</h2>
 			<div class="container flex">
-				<div class="card">
+				<div class="card"> 
 					<h4 class="text-center">Ruby</h4>
 					<img src="images/logos/ruby.png">
 				</div>
@@ -132,7 +132,7 @@
 				</div>
 				<div class="card">
 					<h4 class="text-center">Php</h4>
-					<img src="images/logos/php.png">
+					<img src="images/logos/php.png" id="php">
 				</div>
 				<div class="card">
 					<h4 class="text-center">Clojure</h4>
