--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				</div>
 				<div class="card">
 					<h4 class="text-center">Go</h4>
-					<img src="images/logos/Go.png">
+					<img src="images/logos/go.png">
 				</div>
 				<div class="card">
 					<h4 class="text-center">C#</h4>
