--- a/docs.html
+++ b/docs.html
@@ -25,7 +25,7 @@
 		<!-- Head -->
 		<section class="docs-head bg-primary py-3">
 			<div class="container grid">
-				<div>
+				<div class="docs-text">
 					<h1 class="xl">Documents</h1>
 					<p>Learn how to work with the Metafortosi platform </p>
 				</div>
