--- a/features.html
+++ b/features.html
@@ -25,25 +25,25 @@
 		<!-- Head -->
 		<section class="features-head bg-primary py-3">
 			<div class="container grid">
-				<div>
-					<h1 class="xl">Features</h1>
+				<div class="features-text">
+					<h1 class="xl" >Features</h1>
 					<p>Check out the features of Metafortosi that separates us from the competition </p>
 				</div>
-				<img src="images/server.png" alt="server">
+				<img src="images/server.png" alt="server"  class="server-img">
 			</div>
 		</section>
 		
 		<!-- Sub head -->
 		<section class="features-sub-head bg-light py-3">
 			<div class="container grid">
-				<div>
+				<div class="features-text">
 					<h1 class="md">The Metafortosi Platform</h1>
 					<p>
 						 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur, doloribus repellendus quasi, aut corporis nam alias culpa. Nostrum, inventore accusantium!
                
 					</p>
 				</div>
-				<img src="images/server2.png">
+				<img src="images/server2.png" class="server-img">
 				
 			</div>
 			
