--- a/docs.html
+++ b/docs.html
@@ -33,7 +33,61 @@
 			</div>
 		</section>
 		
-		
+		<!-- Docs Main -->
+		<section class="docs-main py-4">
+			<div class="container grid">
+				<div class="card bg-light p-3">
+					<h3 class="my-2">Essentials</h3>
+					<nav>
+						<ul>
+							<li><a href="#" class="text-primary">Introduction</a></li>
+							<li><a href="#">About Metafortosi</a></li>
+							<li><a href="#">Installation</a></li>
+						</ul>
+					</nav>
+
+					<h3 class="my-2">Deployment</h3>
+					<nav>
+						<ul>
+							<li><a href="#">Setting up a container</a></li>
+							<li><a href="#">Using the CLI</a></li>
+							<li><a href="#">Managing resources</a></li>
+							<li><a href="#">Upgrade & downgrade</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="card">
+					
+					<h2>Introduction</h2>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur, doloribus repellendus quasi, aut corporis nam alias culpa. Nostrum, inventore accusantium!</p>
+					<div class="alert alert-success">
+						<i class="fas fa-info"></i>
+						Lorem ipsum dolor sit amet adipisicing elit. Vero, a!
+					</div>
+					
+					<h3>Lorem ipsum, dolor</h3>
+					<p>orem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur</p>
+					<button class="btn btn-primary">Install CLI</button>
+
+					<h3>Requirements</h3>
+					<ul>
+						<li>Windows 10, Mac OSX, Linux</li>
+						<li>Node.js v12 or higher</li>
+					</ul>
+
+					<h3>Install</h3>
+					<p>Mac (Homebrew)</p>
+					<pre><code>$ brew install metafortosi-cli</code></pre>
+					<p>NPM</p>
+					<pre><code>$ npm install metafortosi-cli</code></pre>
+					<p>Yarn</p>
+					<pre><code>$ yarn install metafortosi-cli</code></pre>
+
+				</div>
+
+			</div>
+			
+		</section>
 		<!-- Footer -->
 		<footer class="footer bg-dark py-5">
 			<div class="container grid grid-3">
