--- a/docs.html
+++ b/docs.html
@@ -66,7 +66,7 @@
 					</div>
 					
 					<h3>Lorem ipsum, dolor</h3>
-					<p>orem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur</p>
+					<p>lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur</p>
 					<button class="btn btn-primary">Install CLI</button>
 
 					<h3>Requirements</h3>
